--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -11,10 +11,43 @@
 }
 
 
-.menu-flotante{
+/* .menu-flotante{
     position: fixed;
     top: 20px;
     left: 20px;
     z-index:1000
-}
+} */
 
+
+.custom-input-file {
+    background-color: #0d4930;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 auto 0;
+    min-height: 15px;
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    width: 300px;
+  }
+  
+  .custom-input-file .input-file {
+   border: 10000px solid transparent;
+   cursor: pointer;
+   font-size: 10000px;
+   margin: 0;
+   opacity: 0;
+   outline: 0 none;
+   padding: 0;
+   position: absolute;
+   right: -1000px;
+   top: -1000px;
+  }
+
+
+  a{
+    text-decoration: none;
+  }
