--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -91,3 +91,30 @@
     overflow-y: scroll; /* Muestra el scroll vertical cuando el contenido excede la altura */
     overflow-x: hidden; /* Oculta el scroll horizontal */
   }
+
+
+        /* Estilo básico para el menú contextual */
+        .menu-contextual {
+          display: none;
+          position: absolute;
+          background-color: white;
+          border: 1px solid #ccc;
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+          z-index: 1000;
+          width: 200px;
+      }
+
+      .menu-contextual ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 5px 0;
+      }
+
+      .menu-contextual ul li {
+          padding: 10px;
+          cursor: pointer;
+      }
+
+      .menu-contextual ul li:hover {
+          background-color: #f0f0f0;
+      }
