Falta completar lo del seguimiento de los reportes

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -92,6 +92,16 @@
     overflow-x: hidden; /* Oculta el scroll horizontal */
   }
 
+  
+  .reportes-scroll{
+    height: 500px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    overflow-y: scroll; /* Muestra el scroll vertical cuando el contenido excede la altura */
+    overflow-x: hidden; /* Oculta el scroll horizontal */
+  }
+
+
 
         /* Estilo básico para el menú contextual */
         .menu-contextual {
