--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -132,3 +132,12 @@
       .font-size-18{
         font-size: 18px;
       }
+
+
+      .scroll-tabla{
+        height: 500px;
+        border: 1px solid #ccc;
+        padding: 10px;
+        overflow-y: scroll; /* Muestra el scroll vertical cuando el contenido excede la altura */
+        overflow-x: hidden; /* Oculta el scroll horizontal */
+      }
