Se agrego ajax al formato control de accesos de los jefes

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -164,3 +164,8 @@
   .zoom_menu {
       position: relative; /* Necesario para el badge */
   }
+
+
+  .table td, .table th {
+    padding: 0.70rem; /* Ajusta el padding aquí */
+  }
