--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Lilita+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+
+.titulo_publicaciones{
+  font-family: "Righteous", Arial, Helvetica, sans-serif;
+  font-size: 40px;
+
+}
 
 .font-arimo{
   font-family: "Arimo", serif;
