--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+.ql-editor img {
+  width: 100% ;
+  height: auto;
+}
 
 .titulo_publicaciones{
   font-family: "Righteous", Arial, Helvetica, sans-serif;
