--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+
+.titulo-post{
+  font-family: "Luckiest Guy", serif;
+}
 
 .ql-editor img {
   width: 100% ;
