--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -17,7 +17,7 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: #0042e8;
+  background-color: #000000;
   color: white;
   border: none;
   border-radius: 50%;
@@ -30,7 +30,7 @@
 }
 
 .flotante:hover {
-  background-color: #0076e4;
+  background-color: #2f2f2f;
   color: rgb(214, 214, 214);
 }
 
